--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-05  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: removed font selection dialogs.
+
 2003-11-04   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Vincent van Adrighem.
