2003-11-05  Tor Lillqvist  <tml@iki.fi>
	* libgimpbase/Makefile.am: Move gimpwin32-io.h to
	libgimpbase_1_3_la_SOURCES, so that it gets distributed.

	* libgimpmodule/Makefile.am: Remove empty and meaningless
	EXTRA_HEADERS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11284 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-05  Tor Lillqvist  <tml@iki.fi>
+
+	* libgimpbase/Makefile.am: Move gimpwin32-io.h to
+	libgimpbase_1_3_la_SOURCES, so that it gets distributed.
+
+	* libgimpmodule/Makefile.am: Remove empty and meaningless
+	EXTRA_HEADERS.
+
 2003-11-05  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimptextoptions.c (gimp_text_options_gui): use
