2003-11-05  Abel Cheung  <maddog@linux.org.hk>
	* zh_TW.po: Updated traditional Chinese translation.
	* ja.po, nl.po: Marked wrong entry as fuzzy.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11285 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-05  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+	* ja.po, nl.po: Marked wrong entry as fuzzy.
+
 2003-11-05  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: removed font selection dialogs.
