--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-05  Hasbullah Bin Pit <sebol@ikhlas.com>
+                                                                                
+        * ms.po: Updated Malay translation by
+                MIMOS Open Source Development Group <ismas@mimos.my>
+
 2003-11-05  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
