2003-11-05  Sven Neumann  <sven@gimp.org>
	* app/widgets/widgets-types.h: removed GimpFontSelection and
	GimpFontSelectionDialog typedefs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11291 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-05  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/widgets-types.h: removed GimpFontSelection and
+	GimpFontSelectionDialog typedefs.
+
 2003-11-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c
