2003-11-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/screenshot.c: rewrote clipping code using
	gdk_rectangle_intersect().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11292 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-11-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/screenshot.c: rewrote clipping code using
+	gdk_rectangle_intersect().
+
+2003-11-05  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/widgets-types.h: removed GimpFontSelection and
 	GimpFontSelectionDialog typedefs.
 
