Updated traditional Chinese translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11293 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-05  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+
 2003-10-31  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * ms.po: Updated Malay Translation by
