--- a/po-script-fu/zh_TW.po
+++ b/po-script-fu/zh_TW.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp-script-fu 1.3.18\n"
+"Project-Id-Version: gimp-script-fu 1.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-03 01:02+0100\n"
-"PO-Revision-Date: 2003-06-16 06:27+0800\n"
+"POT-Creation-Date: 2003-11-05 20:06+0800\n"
+"PO-Revision-Date: 2003-11-05 13:31+0800\n"
 "Last-Translator: Abel Cheung <maddog@linux.org.hk>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -148,21 +148,18 @@ msgid "Server Logfile:"
 msgstr "伺服程式紀錄檔："
 
 #: plug-ins/script-fu/script-fu.c:120
-#, fuzzy
 msgid "<Toolbox>/Xtns/Script-Fu/Script-Fu _Console"
-msgstr "<Toolbox>/擴展/Script-Fu/訊息視窗(_C)..."
+msgstr "<Toolbox>/擴展/Script-Fu/S_cript-Fu 訊息視窗..."
 
 #: plug-ins/script-fu/script-fu.c:145
-#, fuzzy
 msgid "<Toolbox>/Xtns/Script-Fu/_Start Server..."
-msgstr "<Toolbox>/擴展/Script-Fu/伺服程式(_S)..."
+msgstr "<Toolbox>/擴展/Script-Fu/啟動伺服程式(_S)..."
 
 #: plug-ins/script-fu/script-fu.c:269 plug-ins/script-fu/script-fu.c:270
 msgid "Re-read all available scripts"
 msgstr "重新讀入所有可供使用的 script"
 
 #: plug-ins/script-fu/script-fu.c:274
-#, fuzzy
 msgid "<Toolbox>/Xtns/Script-Fu/_Refresh Scripts"
 msgstr "<Toolbox>/擴展/Script-Fu/重新整理(_R)"
 
@@ -174,12 +171,12 @@ msgstr "資料庫瀏覽器"
 #: plug-ins/dbbrowser/dbbrowser_utils.c:124
 #: plug-ins/dbbrowser/dbbrowser_utils.c:143
 msgid "Search by _Name"
-msgstr "根據名稱搜尋(_N)"
+msgstr "依名稱搜尋(_N)"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:126
 #: plug-ins/dbbrowser/dbbrowser_utils.c:145
 msgid "Search by _Blurb"
-msgstr "根據簡介搜尋(_B)"
+msgstr "依簡介搜尋(_B)"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:211
 msgid "_Search:"
@@ -207,11 +204,11 @@ msgstr "說明："
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:599
 msgid "Searching by name - please wait"
-msgstr "正在根據名稱搜尋 ─ 請稍等"
+msgstr "正在依名稱搜尋 ─ 請稍等"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:622
 msgid "Searching by blurb - please wait"
-msgstr "正在根據簡介搜尋 ─ 請稍等"
+msgstr "正在依簡介搜尋 ─ 請稍等"
 
 #: plug-ins/dbbrowser/dbbrowser_utils.c:632
 msgid "Searching - please wait"
@@ -391,7 +388,7 @@ msgstr "文字"
 
 #: plug-ins/script-fu/scripts/3dTruchet.scm.h:1
 msgid "<Toolbox>/Xtns/Script-Fu/Patterns/3_D Truchet..."
-msgstr "<Toolbox>/擴展/Script-Fu/圖樣/立體 Truchet(_D)..."
+msgstr "<Toolbox>/擴展/Script-Fu/圖樣/立體 _Truchet..."
 
 #: plug-ins/script-fu/scripts/3dTruchet.scm.h:2
 #: plug-ins/script-fu/scripts/alien-glow-arrow.scm.h:2
@@ -577,12 +574,15 @@ msgstr "<Toolbox>/擴展/Script-Fu/網頁佈景/異樣發光/圓點(_B)..."
 msgid "Radius"
 msgstr "半徑"
 
+# intltool wrongly extract this for translation -- Abel
 #: plug-ins/script-fu/scripts/alien-glow-button.scm.h:1
 #: plug-ins/script-fu/scripts/gradient-bevel-logo.scm.h:1
 msgid ""
 "\n"
 "\t\t    SF-ADJUSTMENT _"
 msgstr ""
+"\n"
+"\t\t    SF-ADJUSTMENT _"
 
 #: plug-ins/script-fu/scripts/alien-glow-button.scm.h:3
 msgid "<Toolbox>/Xtns/Script-Fu/Web Page Themes/Alien Glow/B_utton..."
@@ -613,12 +613,15 @@ msgstr "留邊"
 msgid "Text Color"
 msgstr "文字顏色"
 
+# intltool wrongly extract this for translation -- Abel
 #: plug-ins/script-fu/scripts/alien-glow-logo.scm.h:1
 #: plug-ins/script-fu/scripts/basic2-logo.scm.h:1
 msgid ""
 "\n"
 "\t\t    SF-COLOR      _"
 msgstr ""
+"\n"
+"\t\t    SF-COLOR      _"
 
 #: plug-ins/script-fu/scripts/alien-glow-logo.scm.h:3
 msgid "<Image>/Script-Fu/Alpha to Logo/Alien _Glow..."
@@ -762,15 +765,15 @@ msgstr "寬度"
 
 #: plug-ins/script-fu/scripts/blend-anim.scm.h:1
 msgid "<Image>/Script-Fu/Animators/_Blend..."
-msgstr ""
+msgstr "<Image>/Script-Fu/動畫/漸變(_B)..."
 
 #: plug-ins/script-fu/scripts/blend-anim.scm.h:2
 msgid "Intermediate Frames"
-msgstr ""
+msgstr "中間的畫格數目"
 
 #: plug-ins/script-fu/scripts/blend-anim.scm.h:3
 msgid "Looped"
-msgstr "循環"
+msgstr "來回漸變"
 
 #: plug-ins/script-fu/scripts/blend-anim.scm.h:4
 msgid "Max. Blur Radius"
@@ -844,9 +847,8 @@ msgid "Spots density Y"
 msgstr "垂直斑點密度"
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:1
-#, fuzzy
 msgid "<Image>/Script-Fu/Animators/B_urn-In..."
-msgstr "<Image>/Script-Fu/動畫/波浪(_W)..."
+msgstr ""
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:2
 msgid "Add Glowing"
@@ -1127,7 +1129,7 @@ msgstr ""
 #: plug-ins/script-fu/scripts/comic-logo.scm.h:9
 #: plug-ins/script-fu/scripts/glossy.scm.h:10
 msgid "Outline Size"
-msgstr ""
+msgstr "輪廓顏色"
 
 #: plug-ins/script-fu/scripts/coolmetal-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/Cool _Metal..."
@@ -1429,7 +1431,7 @@ msgstr "移除背景"
 #: plug-ins/script-fu/scripts/gimp-headers.scm.h:11
 #: plug-ins/script-fu/scripts/gimp-labels.scm.h:14
 msgid "Select-By-Color Threshold"
-msgstr "根據色彩選擇時使用的臨界值"
+msgstr "依色彩選擇時使用的臨界值"
 
 #: plug-ins/script-fu/scripts/gimp-headers.scm.h:12
 #: plug-ins/script-fu/scripts/gimp-labels.scm.h:15
@@ -2015,9 +2017,8 @@ msgid "Turn from Left to Right"
 msgstr "由左至右旋轉"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:1
-#, fuzzy
 msgid "<Image>/Script-Fu/Render/_Spyrogimp..."
-msgstr "<Image>/Script-Fu/描繪/電路(_C)..."
+msgstr "<Image>/Script-Fu/描繪/旋輪線(_S)..."
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:2
 msgid "Airbrush"
@@ -2033,7 +2034,7 @@ msgstr "圓形"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:6
 msgid "Color Method"
-msgstr ""
+msgstr "著色方式"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:7
 msgid ""
@@ -2043,7 +2044,7 @@ msgstr ""
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:8
 msgid "Epitrochoid"
-msgstr ""
+msgstr "外旋輪線"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:9
 msgid "Frame"
@@ -2115,7 +2116,7 @@ msgstr "單色"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:27
 msgid "Spyrograph"
-msgstr ""
+msgstr "旋輪線"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:28
 msgid "Square"
@@ -2136,7 +2137,7 @@ msgstr "三角形"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:32
 msgid "Type"
-msgstr ""
+msgstr "類型"
 
 #: plug-ins/script-fu/scripts/starburst-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/Starb_urst..."
@@ -2168,28 +2169,27 @@ msgstr "效果大小(像素×4)"
 
 #: plug-ins/script-fu/scripts/swirltile.scm.h:1
 msgid "<Toolbox>/Xtns/Script-Fu/Patterns/Swirl-_Tile..."
-msgstr "<Toolbox>/擴展/Script-Fu/圖樣/可鋪排的旋渦(_T)..."
+msgstr "<Toolbox>/擴展/Script-Fu/圖樣/可鋪排式旋渦(_T)..."
 
 #: plug-ins/script-fu/scripts/swirltile.scm.h:9
 msgid "Whirl Amount"
 msgstr ""
 
 #: plug-ins/script-fu/scripts/swirly-pattern.scm.h:1
-#, fuzzy
 msgid "<Toolbox>/Xtns/Script-Fu/Patterns/_Swirly..."
-msgstr "<Toolbox>/擴展/Script-Fu/圖樣/可鋪排的旋渦(_T)..."
+msgstr "<Toolbox>/擴展/Script-Fu/圖樣/旋渦圖案(_S)..."
 
 #: plug-ins/script-fu/scripts/swirly-pattern.scm.h:2
 msgid "Number of Times to Whirl"
-msgstr ""
+msgstr "旋轉次數"
 
 #: plug-ins/script-fu/scripts/swirly-pattern.scm.h:3
 msgid "Quarter Size"
-msgstr ""
+msgstr "四分之一的大小是"
 
 #: plug-ins/script-fu/scripts/swirly-pattern.scm.h:4
 msgid "Whirl Angle"
-msgstr ""
+msgstr "旋轉角度"
 
 #: plug-ins/script-fu/scripts/t-o-p-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/_Particle Trace..."
@@ -2229,11 +2229,11 @@ msgstr "圓弧度數"
 
 #: plug-ins/script-fu/scripts/textured-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/_Textured..."
-msgstr ""
+msgstr "<Image>/Script-Fu/透明度轉為標誌/紋理(_T)..."
 
 #: plug-ins/script-fu/scripts/textured-logo.scm.h:2
 msgid "<Toolbox>/Xtns/Script-Fu/Logos/_Textured..."
-msgstr ""
+msgstr "<Toolbox>/擴展/Script-Fu/文字標誌/紋理(_T)..."
 
 #: plug-ins/script-fu/scripts/textured-logo.scm.h:5
 msgid "Ending Blend"
@@ -2360,17 +2360,16 @@ msgid "Thread Length"
 msgstr "線條長度"
 
 #: plug-ins/script-fu/scripts/web-browser.scm.h:1
-#, fuzzy
 msgid "<Toolbox>/Help/The GIMP Online/Plug-in _Registry"
-msgstr "<Toolbox>/擴展/網頁瀏覽器/增效模組註冊紀錄"
+msgstr "<Toolbox>/求助/GIMP 線上資源/增效模組登記紀錄(_R)"
 
 #: plug-ins/script-fu/scripts/web-browser.scm.h:2
 msgid "<Toolbox>/Help/The GIMP Online/_Developer Web Site"
-msgstr ""
+msgstr "<Toolbox>/求助/GIMP 線上資源/開發者網頁(_D)"
 
 #: plug-ins/script-fu/scripts/web-browser.scm.h:3
 msgid "<Toolbox>/Help/The GIMP Online/_Main Web Site"
-msgstr ""
+msgstr "<Toolbox>/求助/GIMP 線上資源/主網頁(_M)"
 
 #: plug-ins/script-fu/scripts/xach-effect.scm.h:1
 msgid "<Image>/Script-Fu/Shadow/_Xach-Effect..."
@@ -2408,20 +2407,11 @@ msgstr "高亮度區水平偏移量"
 msgid "Highlight Y Offset"
 msgstr "高亮度區垂直偏移量"
 
-#~ msgid "<Toolbox>/Xtns/Script-Fu/Patterns/_Swirly (tileable)..."
-#~ msgstr "<Toolbox>/擴展/Script-Fu/圖樣/旋轉圖形[可鋪排](_S)..."
+#~ msgid "Border"
+#~ msgstr "邊框"
 
-#~ msgid "<Toolbox>/Xtns/Web Browser/Developer FAQ"
-#~ msgstr "<Toolbox>/擴展/網頁瀏覽器/開發者常問集"
-
-#~ msgid "<Toolbox>/Xtns/Web Browser/GIMP Bugs"
-#~ msgstr "<Toolbox>/擴展/網頁瀏覽器/GIMP 錯誤匯報"
-
-#~ msgid "<Toolbox>/Xtns/Web Browser/GIMP Manual"
-#~ msgstr "<Toolbox>/擴展/網頁瀏覽器/GIMP 手冊"
-
-#~ msgid "<Toolbox>/Xtns/Web Browser/GIMP News"
-#~ msgstr "<Toolbox>/擴展/網頁瀏覽器/GIMP 新聞"
+#~ msgid "Fonts"
+#~ msgstr "字型"
 
 #~ msgid "<Toolbox>/Xtns/Web Browser/GIMP Tutorials"
 #~ msgstr "<Toolbox>/擴展/網頁瀏覽器/GIMP 教學手冊"
@@ -2458,12 +2448,6 @@ msgstr "高亮度區垂直偏移量"
 
 #~ msgid "<Toolbox>/Xtns/Web Browser/User FAQ"
 #~ msgstr "<Toolbox>/擴展/網頁瀏覽器/使用者常問集"
-
-#~ msgid "Border"
-#~ msgstr "邊框"
-
-#~ msgid "Fonts"
-#~ msgstr "字型"
 
 #~ msgid "<Image>/Script-Fu/Render/Make Grid System..."
 #~ msgstr "<Image>/Script-Fu/描繪/製作方格矩陣..."
