2003-11-05  Sven Neumann  <sven@gimp.org>
	* app/core/gimpbrush.c
	* plug-ins/common/gbr.c: added support for loading cinepaint
	brushes (GIMP brush version 3).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11295 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2003-11-05  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpbrush.c
 	* plug-ins/common/gbr.c: added support for loading cinepaint
 	brushes (GIMP brush version 3).
 
