--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-06  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2003-11-05  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * ms.po: Updated Malay translation by
