2003-11-06  Sven Neumann  <sven@gimp.org>
	* app/core/gimpbrush.c (gimp_brush_load_brush): read pixmap
	brushes in chunks of 8192 bytes in order to speed up loading.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11297 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpbrush.c (gimp_brush_load_brush): read pixmap
+	brushes in chunks of 8192 bytes in order to speed up loading.
+
 2003-11-05  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpbrush.c
