--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-06  Sven Neumann  <sven@gimp.org>
 
+	* etc/ps-menurc: update contributed by Eric Pierce.
+
+2003-11-06  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpbrush.c (gimp_brush_load_brush): read pixmap
 	brushes in chunks of 8192 bytes in order to speed up loading.
 
