2003-11-06  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpdialog.c: fixed/added API docs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11301 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-06  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpwidgets/gimpdialog.c: fixed/added API docs.
+
+2003-11-06  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpwidgets/gimpdialog.[ch]: removed our own action_area API
 	and use GtkDialog's one. Create all dialogs without separator.
 	Changed almost everything else too. Fixes bug #125143.
