--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-06  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpexport.sgml
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpdialog.sgml: updated.
+
 2003-11-05  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
