--- a/tips/ms.po
+++ b/tips/ms.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Gimp-tips HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-01 01:04+0800\n"
-"PO-Revision-Date: 2003-09-01 09:00+0800\n"
+"POT-Creation-Date: 2003-11-07 00:20+0800\n"
+"PO-Revision-Date: 2003-11-04 12:20+0800\n"
 "Last-Translator: MIMOS Open Source Development Group <ismas@mimos.my>\n"
 "Language-Team: Projek Gabai <gabai-penyumbang@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
@@ -44,13 +44,12 @@ msgstr ""
 "bukannya warna latar depan."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
 "<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
 "degree angles."
 msgstr ""
-"<tt>Ctrl</tt>-seret dengan alat Jelma dalam mod putaran akan mengekang "
-"putaran kepada sudut 15 darjah."
+"<tt>Ctrl</tt>-seret dengan alat Putar akan mengekang putaran kepada sudut 15 "
+"darjah."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -62,7 +61,6 @@ msgstr ""
 "menunjukkan semua lapisan."
 
 #: tips/gimp-tips.xml.in.h:7
-#, fuzzy
 msgid ""
 "A Floating Selection must be anchored to a new layer or to the last active "
 "layer before doing other operations on the image. Click on the \"New Layer\" "
@@ -70,22 +68,22 @@ msgid ""
 "same."
 msgstr ""
 "Pemilihan Apung mestilah ditambat pada lapisan baru atau pada lapisan aktif "
-"terakhir sebelum melakukan pengendalian lain pada imej. Klik Lapisan Baru "
-"atau butang Lapisan Tambat dalam dialog \"Lapisan, Saluran dan Laluan\", "
-"atau gunakan menu untuk melakukan perkara yang sama."
+"terakhir sebelum melakukan pengendalian lain pada imej. Klik \"Lapisan Baru"
+"\" atau \"butang Lapisan Tambat\" dalam dialog Lapisan, atau gunakan menu "
+"untuk melakukan perkara yang sama."
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
 "menu item, and pressing the desired key combination. If \"Save Keyboard "
 "Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
-"Anda boleh mengumpukkan semula kekunci pintas pada mana-mana menu dengan "
-"membesarkan menu tersebut, memilih item menu, dan menekan gabungan kekunci "
-"pintas yang baru. Cara ini dinamik dan disimpan apabila anda keluar dari "
-"GIMP."
+"Selepas anda aktifkan \"Kekunci Pintas Dinamik\" dalam dialog Keutamaan, "
+"anda boleh mengumpukkan semula kekunci pintas. Lakukannya dengan membesarkan "
+"menu tersebut, memilih item menu, dan menekan gabungan kekunci yang baru. "
+"Jika \"Simpan Kekunci Pintas\" diaktifkan, ikatan kekunci disimpan bila anda "
+"keluar dari GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -98,7 +96,6 @@ msgstr ""
 "menyeretnya keluar dari imej dengan alat Alih."
 
 #: tips/gimp-tips.xml.in.h:10
-#, fuzzy
 msgid ""
 "If some of your scanned photos do not look colorful enough, you can easily "
 "improve their tonal range with the \"Auto\" button in the Levels tool (Layer-"
@@ -107,19 +104,19 @@ msgid ""
 msgstr ""
 "Jika ada antara gambar anda yang diimbas tidak cukup jelas, dengan mudah "
 "anda boleh meningkatkan julat kesan warnanya dengan butang \"Auto\" pada "
-"alat Aras (Imej-&gt;Warna-&gt;Aras). Jika terdapat apa-apa percikan warna, "
-"anda boleh membetulkannya dengan alat Lengkung (Imej-&gt;Warna-&gt;Lengkung)."
+"alat Aras (Lapisan-&gt;Warna-&gt;Aras). Jika terdapat apa-apa percikan "
+"warna, anda boleh membetulkannya dengan alat Lengkung (Lapisan-&gt;Warna-&gt;"
+"Lengkung)."
 
 #: tips/gimp-tips.xml.in.h:11
-#, fuzzy
 msgid ""
 "If you stroke a path (Edit-&gt;Stroke Selection), the paint tools can be "
 "used with their current settings. You can use the Paintbrush in gradient "
 "mode or even the Eraser or the Smudge tool."
 msgstr ""
-"Jika anda melakar laluan (Edit-&gt;Lakar), maka alat lukisan semasa dan "
-"setingnya digunakan. Anda boleh menggunakan Beberus cat dalam mod kecerunan, "
-"alat Klon yang ada corak ataupun Pemadam atau alat Comot."
+"Jika anda menanda laluan (Edit-&gt;Tanda Pemilihan), alat lukisan boleh "
+"digunakan dengan seting semasa mereka. Anda boleh menggunakan Berus cat "
+"dalam mod kecerunan atau Pemadam atau alat Comot."
 
 #: tips/gimp-tips.xml.in.h:12
 msgid ""
@@ -131,14 +128,13 @@ msgstr ""
 "alatan dan dialog lain."
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
 "you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "Kebanyakan plug-in berfungsi pada lapisan semasa bagi imej semasa. Dalam "
-"sesetengah kes, anda perlu mencantumkan semua lapisan (Lapisan-&gt;Ratakan "
+"sesetengah kes, anda perlu mencantumkan semua lapisan (Imej-&gt;Ratakan "
 "Imej) jika anda ingin plug-in berfungsi pada seluruh imej."
 
 #: tips/gimp-tips.xml.in.h:14
@@ -150,7 +146,6 @@ msgstr ""
 "Dan jangan bimbang, anda boleh membuat asal kebanyakan kesilapan..."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
@@ -159,8 +154,9 @@ msgid ""
 msgstr ""
 "Bukan semua kesan boleh digunakan untuk semua jenis imej. Ini ditunjukkan "
 "melalui entri menu yang dikelabukan. Anda mungkin perlu mengubah mod imej "
-"kepada RGB (Imej-&gt;Mod-&gt;RGB), menambahkan saluran alfa (Lapisan-&gt;"
-"Tambahkan Saluran Alfa) atau meratakannya (Lapisan-&gt;Ratakan Imej)."
+"kepada RGB (Imej-&gt;Mod-&gt;RGB), menambahkan saluran alfa (Lapisan-&gt; "
+"Kelutsinaran-&gt;Tambah Saluran Alfa) atau meratakannya (Imej-&gt;Ratakan "
+"Imej)."
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -195,7 +191,6 @@ msgstr ""
 "memandangnya anda dapat melihat gabungan bagi kandungan imej tersebut."
 
 #: tips/gimp-tips.xml.in.h:19
-#, fuzzy
 msgid ""
 "The file selection dialog box has command-line completion with <tt>Tab</tt>, "
 "just like the shell. Type part of a filename, hit <tt>Tab</tt>, and voila, "
@@ -206,7 +201,6 @@ msgstr ""
 "tekan <tt>Tab</tt>, dan Selesai."
 
 #: tips/gimp-tips.xml.in.h:20
-#, fuzzy
 msgid ""
 "The layer named \"Background\" is special because it lacks transparency. "
 "This prevents you from adding a layer mask or moving the layer up in the "
@@ -215,9 +209,9 @@ msgid ""
 msgstr ""
 "Lapisan yang dinamai \"Latar Belakang\" adalah istimewa kerana kurang "
 "kelutsinaran. Ini menghalang anda daripada menambahkan topeng lapisan atau "
-"mengalihkan lapisan ke bahagian atas dalam tindanan itu. Anda boleh "
-"menambahkan kelutsinaran padanya dengan mengklik kanan dialog \"Lapisan, "
-"Saluran dan Laluan\" dan memilih \"Tambahkan Saluran Alfa\"."
+"mengalihkan lapisan ke bahagian atas dalam tindanan itu. Anda boleh menambah "
+"kelutsinaran padanya dengan mengklik kanan dialog Lapisan dan memilih "
+"\"Tambahkan Saluran Alfa\"."
 
 #: tips/gimp-tips.xml.in.h:21
 msgid ""
@@ -263,6 +257,9 @@ msgid ""
 "makes the window move, your window manager uses the <tt>Alt</tt> key "
 "already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
+"Anda boleh selaraskan dan gantikan pemilihan menggunakan <tt>ALt</tt>. Jika "
+"ini membuatkan tetingkap beralih, pengurus tetingkap anda telah menggunakan "
+"kekunci <tt>Alt</tt>. Cuba tekan <tt>Shift</t> pada masa yang sama."
 
 #: tips/gimp-tips.xml.in.h:25
 msgid ""
@@ -273,26 +270,23 @@ msgstr ""
 "dan menyeret ke kiri dan kanan."
 
 #: tips/gimp-tips.xml.in.h:26
-#, fuzzy
 msgid ""
 "You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
 "Anda boleh mewujudkan dan mengedit pemilihan kompleks dengan menggunakan "
-"alat Bezier. Tab \"Laluan\" dalam dialog \"Lapisan, Saluran dan Laluan\" "
-"membolehkan anda menggunakan beberapa laluan dan menukarkannya kepada "
-"pemilihan."
+"alat Laluan. Dialog Laluan membolehkan anda menggunakan beberapa laluan dan "
+"menukarkannya kepada pemilihan."
 
 #: tips/gimp-tips.xml.in.h:27
-#, fuzzy
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
-"Anda boleh menyeret lapisan dari dialog \"Lapisan, Saluran dan Laluan\" dan "
-"melepaskannya ke dalam kotak alatan. Ini akan mewujudkan imej baru yang "
-"hanya mengandungi lapisan tersebut."
+"Anda boleh menyeret lapisan dari dialog Lapisan dan melepaskannya ke dalam "
+"kotak alatan. Ini akan mewujudkan imej baru yang hanya mengandungi lapisan "
+"tersebut."
 
 #: tips/gimp-tips.xml.in.h:28
 msgid ""
@@ -305,16 +299,14 @@ msgstr ""
 "dalam imej akan mengisi imej atau pemilihan semasa dengan warna tersebut."
 
 #: tips/gimp-tips.xml.in.h:29
-#, fuzzy
 msgid ""
 "You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
 "strokes the edge of your current selection. More complex shapes can be drawn "
 "using the Path tool or with Filters-&gt;Render-&gt;Gfig."
 msgstr ""
-"Dengan menggunakan Edit-&gt;Lakar membolehkan anda melukis segi empat sama "
-"atau bulatan ringkas dengan mengecat tepi pemilihan semasa anda dengan berus "
-"aktif. Banyak lagi bentuk kompleks boleh dilukis dengan Penapis-&gt;Beri-&gt;"
-"Gfig."
+"Anda boleh melukis segi empat sama atau bulatan ringkas menggunakan Edit-&gt;"
+"TandakanPemilihan. Ia menanda tepi pemilihan semasa anda. Banyak lagi bentuk "
+"kompleks boleh dilukis dengan alat Laluan atau Penapis-&gt;Render-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -325,13 +317,12 @@ msgstr ""
 "menekan kekunci F1 pada bila-bila masa. Ini juga boleh dilakukan dalam menu."
 
 #: tips/gimp-tips.xml.in.h:31
-#, fuzzy
 msgid ""
 "You can perform many layer operations by right-clicking on the text label of "
 "a layer in the Layers dialog."
 msgstr ""
 "Anda boleh melaksanakan banyak pengendalian lapisan dengan mengklik kanan "
-"label teks dalam lapisan dialog \"Lapisan, Saluran dan Laluan\"."
+"label teks lapisan dalam dialog Lapisan."
 
 #: tips/gimp-tips.xml.in.h:32
 msgid ""
@@ -345,7 +336,6 @@ msgstr ""
 "mula."
 
 #: tips/gimp-tips.xml.in.h:33
-#, fuzzy
 msgid ""
 "You can save a selection to a channel (Select-&gt;Save to Channel) and then "
 "modify this channel with any paint tools. Using the buttons in the Channels "
@@ -354,9 +344,8 @@ msgid ""
 msgstr ""
 "Anda boleh menyimpan pemilihan ke saluran (Pilih-&gt;Simpan ke Saluran) dan "
 "kemudian mengubah suai saluran ini dengan mana-mana alat cat. Dengan "
-"menggunakan butang dalam tab \"Saluran\" bagi dialog \"Lapisan, Saluran dan "
-"Laluan\", anda boleh toggle kejelasan saluran baru ini atau menukarkannya "
-"kepada pemilihan."
+"menggunakan butang dalam dialog Saluran, anda boleh togol kejelasan saluran "
+"baru ini atau menukarkannya kepada pemilihan."
 
 #: tips/gimp-tips.xml.in.h:34
 msgid ""
@@ -376,17 +365,16 @@ msgstr ""
 "jika ia lebih besar daripada tetingkap paparannya."
 
 #: tips/gimp-tips.xml.in.h:36
-#, fuzzy
 msgid ""
 "You can use the paint tools to change the selection. Click on the \"Quick "
 "Mask\" button at the bottom left of an image window. Change your selection "
 "by painting in the image and click on the button again to convert it back to "
 "a normal selection."
 msgstr ""
-"Anda boleh menggunakan alat cat untuk menukar pemilihan. Klik butang Topeng "
-"Cepat di sebelah bawah kiri tetingkap imej. Tukar pemilihan anda dengan "
-"mengecat imej dan klik butang tersebut sekali lagi untuk menukarkannya "
-"semula kepada pemilihan normal."
+"Anda boleh menggunakan alat cat untuk menukar pemilihan. Klik butang "
+"\"Topeng Cepat\" di sebelah bawah kiri tetingkap imej. Tukar pemilihan anda "
+"dengan mengecat imej dan klik butang tersebut sekali lagi untuk "
+"menukarkannya semula kepada pemilihan normal."
 
 #~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
 #~ msgstr ""
