--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
+                                                                                
+        * ms.po: Updated  Malay translation by
+                MIMOS Open Source Development Group <syed@mimos.my>
+
 2003-11-03 Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation
