2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
        * ms.po: Updated Malay translation by
                MIMOS Open Source Development Group <ismas@mimos.my>


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11306 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
+                                                                                
+        * ms.po: Updated Malay translation by
+                MIMOS Open Source Development Group <ismas@mimos.my>
+
 2003-11-06  Jan Morén  <jan.moren@lucs.lu.se>
 
 	* sv.po: Updated Swedish translation.
