--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,18 @@ development takes place on the road to the next stable release
 GIMP version 2.0.
 
 
+Overview of Changes in GIMP 1.3.23
+==================================
+- Redone GimpDialog API [Mitch]
+- Load GIMP brush format version 3 [Sven]
+- Allow to use GIMP without any fonts [Sven]
+- Lots of bug fixes
+
+Other contributors:
+  Ville Pätsi, Eric Pierce, Tor Lillqvist, Henrik Brix Andersen,
+  Manish Singh
+
+
 Overview of Changes in GIMP 1.3.22
 ==================================
 - Made GIMP compile and work with gtk+-2.3 [Yosh]
