--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * ms.po: Updated Malay translation by
@@ -156,7 +161,7 @@
 2003-10-13  Marco Ciampa  <ciampix@libero.it>
 	
 	* it.po: Updated italian translation.
-	
+
 2003-10-10  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from work of
