2003-11-06  Jakub Steiner <jimmac@ximian.com>
* themes/Default/images/preferences/session.png: use somthing
  nice


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11309 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06  Jakub Steiner <jimmac@ximian.com>
+
+	* themes/Default/images/preferences/session.png: use somthing
+	  nice
+	
 2003-11-06  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpdialog.c: fixed/added API docs.
