Added French translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11310 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Added French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Updated Malay Translation 
