Added French translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11311 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -2,6 +2,7 @@
 
 	* fr.po: Added French translation from
 	Raymond Ostertag <r.ostertag@caramail.com>.
+	* Makefile.am: added fr.po.
 
 2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
 
