2003-11-07  Michael Natterer  <mitch@gimp.org>
	* app/gui/tool-options-commands.c
	(tool_options_rename_saved_cmd_callback): fixed typo in dialog title.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11312 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/tool-options-commands.c
+	(tool_options_rename_saved_cmd_callback): fixed typo in dialog title.
+
 2003-11-06  Jakub Steiner <jimmac@ximian.com>
 
 	* themes/Default/images/preferences/session.png: use somthing
