2003-11-07  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimpexport.c: beautified and cleaned up the export
	dialogs.

	* libgimpwidgets/gimpquerybox.c: cleanups and fixes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11314 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-07  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimpexport.c: beautified and cleaned up the export
+	dialogs.
+
+	* libgimpwidgets/gimpquerybox.c: cleanups and fixes.
+
 2003-11-07 Simon Budig  <simon@gimp.org>
 
 	* app/vectors/gimpvectors.[ch]: New function that appends a
