2003-11-07  Hasbullah Bin Pit <sebol@ikhlas.com>
        * ms.po: Updated fix for bug #125360 by
                MIMOS Open Source Development Group <ismas@mimos.my>


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11316 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-07  Hasbullah Bin Pit <sebol@ikhlas.com>
+
+	* ms.po: Updated fix for bug #125360 by
+                MIMOS Open Source Development Group <ismas@mimos.my>
+
 2003-11-05  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
